Solved the problem with scrolling everything, instead of the container in the RenderChatDetailsMessages using max-height and overflow

--- a/src/components/MainGridInterface/MainGridInterface.module.css
+++ b/src/components/MainGridInterface/MainGridInterface.module.css
@@ -5,6 +5,7 @@
   min-height: 100vh;
   gap: 1rem;
   padding: 1rem 1rem 1rem 0;
+  position: relative;
 }
 
 .asideMainNavigationContainer {
@@ -28,7 +29,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 97vh;
+  min-height: 96.5vh;
 }
 
 .liFlexedImgAnchorContainer {
